--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "repository": "git@github.com:touch-js/simple.git",
   "author": "sollyu <sollyu@qq.com>",
-  "license": "Apache License 2",
+  "license": "Apache-2.0",
   "devDependencies": {
+    "copy-webpack-plugin": "^10.1.0",
     "javascript-obfuscator": "^3.0.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
@@ -15,5 +16,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./config/webpack.config.js"
+  },
+  "dependencies": {
+    "crypto-js": "^4.1.1"
   }
 }
